--- a/fp2023.cabal
+++ b/fp2023.cabal
@@ -52,6 +52,7 @@ library
     , free
     , time
     , transformers
+    , yaml
   default-language: Haskell2010
 
 executable fp2023-manipulate
@@ -71,6 +72,7 @@ executable fp2023-manipulate
     , repline
     , terminal-size
     , time
+    , yaml
   default-language: Haskell2010
 
 executable fp2023-select-all
@@ -88,6 +90,7 @@ executable fp2023-select-all
     , fp2023
     , repline
     , terminal-size
+    , yaml
   default-language: Haskell2010
 
 executable fp2023-select-more
@@ -105,6 +108,7 @@ executable fp2023-select-more
     , fp2023
     , repline
     , terminal-size
+    , yaml
   default-language: Haskell2010
 
 test-suite fp2023-test
@@ -121,4 +125,5 @@ test-suite fp2023-test
       base >=4.7 && <5
     , fp2023
     , hspec
+    , yaml
   default-language: Haskell2010
