Add encoded tables employees and flags to the db directory

--- a/src/db/employees.yaml
+++ b/src/db/employees.yaml
@@ -1,15 +1,18 @@
-tableName: "employees"
-tableColumns:
-  - name: "id"
-    type: IntegerType
-  - name: "name"
-    type: StringType
-  - name: "surname"
-    type: StringType
-tableDataRows:
-  - - IntegerValue: 1
-    - StringValue: "Vi"
-    - StringValue: "Po"
-  - - IntegerValue: 2
-    - StringValue: "Ed"
-    - StringValue: "Dl"
+- - - id
+    - IntegerType
+  - - name
+    - StringType
+  - - surname
+    - StringType
+- - - contents: 1
+      tag: IntegerValue
+    - contents: Vi
+      tag: StringValue
+    - contents: Po
+      tag: StringValue
+  - - contents: 2
+      tag: IntegerValue
+    - contents: Ed
+      tag: StringValue
+    - contents: Dl
+      tag: StringValue
