--- a/employees.yaml
+++ b/employees.yaml
@@ -16,8 +16,8 @@
       tag: StringValue
     - contents: Dl
       tag: StringValue
-  - - contents: '3'
-      tag: StringValue
+  - - contents: 3
+      tag: IntegerValue
     - contents: jonas
       tag: StringValue
     - contents: jonaitis
