Add complete insert

--- a/src/db/employees.yaml
+++ b/src/db/employees.yaml
@@ -16,3 +16,9 @@
       tag: StringValue
     - contents: Dl
       tag: StringValue
+  - - contents: 3
+      tag: IntegerValue
+    - contents: jonas
+      tag: StringValue
+    - contents: jonaitis
+      tag: StringValue
