Add delete parser

--- a/src/db/employees.yaml
+++ b/src/db/employees.yaml
@@ -22,3 +22,9 @@
       tag: StringValue
     - contents: jonaitis
       tag: StringValue
+  - - contents: 4
+      tag: IntegerValue
+    - contents: vardenis
+      tag: StringValue
+    - contents: pavardenis
+      tag: StringValue
