Add test DSL and tests for the DSL

--- a/fp2023.cabal
+++ b/fp2023.cabal
@@ -138,6 +138,7 @@ test-suite fp2023-test
     , base >=4.7 && <5
     , bytestring >=0.11.4.0
     , fp2023
+    , free
     , hspec
     , text
     , yaml
